--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<!DOCTYPE html><html lang="en"><head><script src="assets/web.js" charset="utf-8"></script></head><body><noscript>Enable JavaScript</noscript></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>source-map-visualization</title>
+  </head>
+  <body>
+  <script src="bundle.js"></script></body>
+</html>
